# ai-eng-estimator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_ollama.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/context/: examples.py
app/routers/: __init__.py  estimations.py
app/schemas/: __init__.py  estimations.py
app/services/: llm_service.py
client/: .pre-commit-config.yaml  README.md  app.py  models.py  pyproject.toml  requirements.txt
client/scripts/: export_models.py
client/tests/: test_models_sync.py
engine/: .env.example  README.md  docker-compose.yml  ollama-entrypoint.sh  pyproject.toml
engine/app/: config.py  dependencies.py  main.py
engine/app/cache/: __init__.py  ollama_vectorizer.py  semantic.py
engine/app/context/: __init__.py  examples.py
engine/app/guardrails/: __init__.py  input.py  output.py
engine/app/prompts/: __init__.py  loader.py  versions.py
engine/app/prompts/estimation/v1/: examples.j2  system.j2  user.j2
engine/app/prompts/estimation/v2/: examples.j2  system.j2  user.j2
engine/app/routers/: estimations.py
engine/app/schemas/: __init__.py  estimation.py
engine/app/services/: cache.py  estimation_service.py  evaluation.py  llm_service.py  llm_wrapper.py
engine/app/static/: sse_demo.html
engine/tests/: conftest.py  test_cache.py  test_estimate_endpoint.py  test_estimate_stream.py  test_estimation_schema.py  test_estimation_service.py  test_evaluation.py  test_examples_format.py  test_health.py  test_llm_wrapper.py  test_ollama_vectorizer.py  test_semantic_cache.py  test_structure.py
engine/tests/prompts/: test_estimation_v1.py
engine/transcripts/: meeting_transcription.txt
openspec/: config.yaml
openspec/changes/local-first-llm-architecture/: design.md  proposal.md  tasks.md
openspec/changes/schemas-y-formulario-cliente/: design.md  proposal.md  tasks.md
tests/: test_api.py  test_estimations_integration.py  test_structure.py
(+35 files in other folders)
