[project]
name = "Estimator"
version = "0.1.0"
description = "FastAPI service for software estimations with CAG architecture."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "fastapi",
    "openai",
    "pydantic-settings",
    "python-dotenv",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
