[project]
name = "estimator-client"
version = "0.1.0"
description = "Streamlit client for the estimator engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "streamlit>=1.30",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "BLE"]

[tool.ruff.lint.isort]
known-first-party = ["app", "models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["../engine", ".", ".."]
