[project]
name = "Estimator"
version = "0.1.0"
description = "FastAPI service for software estimations with CAG architecture."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "litellm>=1.50",
    "redis>=5.0",
    "redisvl>=0.5",
    "instructor>=1.6",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "fakeredis>=2.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
